Attempted to complete final steps of project. Unable to correctly align flexboxes.

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -19,6 +19,7 @@
     display: inline-flex;
     position: fixed;
     z-index: 20;
+    border-bottom: 1px black solid;
 }
 
 nav {
@@ -37,8 +38,7 @@ nav a {
 
 .large.column {
     width: 630px;
-    margin-right: 30px;
-    margin-top: 30px;
+    margin: 30px 30px 30px 0;
     top: 80px;
     position: relative;
     z-index: 5;
@@ -46,8 +46,7 @@ nav a {
 
 .medium.column {
     width: 300px;
-    margin-right: 30px;
-    margin-top: 30px;
+    margin: 30px 30px 30px 0;
     top: 80px;
     position: relative;
     z-index: 5;
@@ -55,8 +54,7 @@ nav a {
 
 .small.column {
     width: 240px;
-    margin-right: 30px;
-    margin-top: 30px;
+    margin: 30px 30px 30px 0;
     top: 80px;
     position: relative;
     z-index: 5;
@@ -117,4 +115,38 @@ nav a {
 #news_bite {
     background-image: url("../images/img-news-bite.png");
     height: 240px;
+}
+
+#news_bite_title {
+    font-size: 16px;
+    font-weight: bold;
+    justify-content: center;
+}
+
+#news_bite_text {
+    background-color: WhiteSmoke;
+    font-family: Verdana;
+    font-size: 12px;
+    color: dimgray;
+    padding: 10px 50px 10px 30px;
+    border-bottom: 1px black solid;
+}
+
+.footer {
+    width: 100%;
+    height: 300px;
+    align-items: center;
+    justify-content: center;
+    background-color: mediumaquamarine;
+    margin: auto;
+    font-family: Verdana;
+    font-size: 12px;
+}
+
+#my_times {
+    font-family: Georgia;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    display: flex;
 }
